--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tda366-falcons-client</name>
+	<name>tda366-falcons</name>
 	<comment></comment>
 	<projects>
 	</projects>
