--- a/Falcons Client/.classpath
+++ b/Falcons Client/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Falcons Library"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Falcons Pluginlibrary"/>
+	<classpathentry kind="lib" path="simple-xml-2.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
