--- a/Falcons Library/.classpath
+++ b/Falcons Library/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Falcons Pluginlibrary"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Downloads/simple-xml-2.5.1/jar/simple-xml-2.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Printz/Falcons/Falcons Library/simple-xml-2.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
