--- a/Falcons TellstickPlugin/.classpath
+++ b/Falcons TellstickPlugin/.classpath
@@ -2,5 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/jna.jar"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/platform.jar"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/SunriseSunsetCalculator-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/swt-debug.jar"/>
+	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
