--- a/Falcons TellstickPlugin/.classpath
+++ b/Falcons TellstickPlugin/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/SunriseSunsetCalculator-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/swt-debug.jar"/>
 	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/swt.jar"/>
+	<classpathentry kind="src" path="/Falcons Pluginlibrary"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
