--- a/Falcons TellstickPlugin/.classpath
+++ b/Falcons TellstickPlugin/.classpath
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2-sources.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/jna.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/platform.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/SunriseSunsetCalculator-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/swt-debug.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/swt.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/commons-cli-1.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/commons-cli-1.2-sources.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/jna.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/platform.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/SunriseSunsetCalculator-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/swt-debug.jar"/>
-	<classpathentry kind="lib" path="/Users/Gustav/workspace/TellstickDUO/lib/swt.jar"/>
-	<classpathentry kind="src" path="/Falcons Pluginlibrary"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/commons-cli-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/jna.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/platform.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/SunriseSunsetCalculator-1.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/swt-debug.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/Gustav/Eclipse workspace/TellstickDUO/lib/swt.jar"/>
+	<classpathentry exported="true" kind="src" path="/Falcons Pluginlibrary"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
